<resources>
    <string name="app_name">TheyWorkForYou</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_title">TheyWorkForYou</string>
    <string name="nav_header_subtitle">An unofficial implementation\nBy Chris Ward</string>
    <string name="mps">MPs</string>
    <string name="lords">Lords</string>
    <string name="debates">Debates</string>
    <string name="people">People</string>
    <string name="written_answers">Written Answers</string>
    <string name="parliamentary_business">Parliamentary Business</string>
    <string name="all_mps">All MPs</string>
    <string name="all_lords">All Lords</string>
</resources>
